# claude-pace-maker

./: .gitattributes  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  HOOK_INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  README.md  coverage.json  dev-setup.sh  install.sh  lint.sh  migrate-to-plugin.sh  pyproject.toml  requirements.txt  setup.py  usage_payload.txt
.analysis/: issue_3_linear_pacing_implementation.md
.claude/: settings.json
.claude-plugin/: plugin.json
config/: config.defaults.json  source_code_extensions.json  token_costs.json
docs/: ARCHITECTURE.md  PRELOAD_SYSTEM.md  WEEKEND_AWARE_ALGORITHM.md  adaptive_throttle_implementation.md
hooks/: hooks.json
reports/: architectural-analysis.md  pre_tool_validation_test_report.md
scripts/: bootstrap-plugin.sh  doctor.sh  hook.sh  manual_e2e_test.py  pace-maker  probe-usage-api.py  run_tests.sh
tests/: conftest.py  manual_test_adaptive_throttle.py  manual_test_flexible_matching.py  test_activity_indicators.py  test_adaptive_throttle.py  test_agy_provider.py  test_agy_registry.py  test_agy_user_commands.py  test_api_backoff.py  test_api_client.py  test_api_client_fallback.py  test_approved_parsing.py  test_auto_tempo_mode.py  test_blockage_legitimacy.py  test_blockage_telemetry.py  test_bootstrap_plugin.py  test_claude_code_version.py  test_clean_code_cli_integration.py  test_clean_code_rules_e2e.py  test_cli_blockage_stats.py  test_code_reviewer.py  test_codex_profile.py  test_codex_profile_story75.py  test_codex_usage.py  test_concurrent_subagent_traces.py  test_constants.py  (+168 more)
(+210 files in other folders)
